fix alignment

--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,18 @@
 @tailwind utilities;
 
 body {
-  background: #f1ecec;
+    background: #f1ecec;
+}
+@font-face {
+    font-family: 'Geist';
+    src: url("./assets/fonts/Geist-Regular.woff2") format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Geist';
+    src: url("./assets/fonts/Geist-Bold.woff2") format('woff2');
+    font-weight: bold;
+    font-style: normal;
 }
